Fixed spacing in comments on posts show page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -17,8 +17,3 @@ hr {
     display: inline;
 }
 
-.github-button, .linkedin-button, .email-button {
-    background-color: #ffffff;
-    color: black;
-    border-radius: 50%;
-}
